# cloudscraper-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: cloudscraper.rs  lib.rs
src/challenges/: mod.rs  pipeline.rs
src/challenges/core/: analysis.rs  executor.rs  mod.rs  reqwest_client.rs  timing.rs  types.rs
src/challenges/detectors/: mod.rs
src/challenges/solvers/: access_denied.rs  bot_management.rs  javascript_v1.rs  javascript_v2.rs  managed_v3.rs  mod.rs  rate_limit.rs  turnstile.rs
src/challenges/user_agents/: mod.rs
src/config/: mod.rs
src/data/: mod.rs
src/external_deps/: mod.rs
src/external_deps/captcha/: anticaptcha.rs  capsolver.rs  mod.rs  twocaptcha.rs
src/external_deps/interpreters/: boa.rs  mod.rs
src/modules/: mod.rs
src/modules/adaptive_timing/: mod.rs
src/modules/anti_detection/: mod.rs
src/modules/events/: mod.rs
src/modules/metrics/: mod.rs
src/modules/ml/: mod.rs
src/modules/performance/: mod.rs
src/modules/proxy/: mod.rs
src/modules/spoofing/: mod.rs
src/modules/state/: mod.rs
src/modules/tls/: mod.rs
tests/: interactive-test.md  interactive.rs
